<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activity.SignUpActivity">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/back"
        android:layout_marginTop="@dimen/dimen12"
        android:layout_marginLeft="@dimen/dimen12"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/dimen12"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen12"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/montserrat_bold"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_below="@+id/tv_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen14"
        android:layout_marginLeft="@dimen/dimen14"
        android:layout_marginRight="@dimen/dimen14">





    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/dimen8"
        android:textColor="@color/colorLightGrey"
        tools:ignore="MissingConstraints"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/dimen12"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:background="@null"
            android:hint="@string/enter_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen8"
            android:paddingBottom="@dimen/dimen3"
            android:fontFamily="@font/montserrat_medium"
            android:paddingTop="@dimen/dimen4"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/dimen8"
        android:layout_marginTop="@dimen/dimen8"
        android:textColor="@color/colorLightGrey"
        android:fontFamily="@font/montserrat_regular"
        tools:ignore="MissingConstraints" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimen8"
            android:fontFamily="@font/montserrat_medium"
            android:paddingBottom="@dimen/dimen3"
            android:background="@null"
            android:paddingTop="@dimen/dimen4"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="@dimen/dimen8"
        android:textColor="@color/colorLightGrey"
        android:layout_marginTop="@dimen/dimen8"
        tools:ignore="MissingConstraints" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:hint="@string/pass"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen8"
                android:paddingBottom="@dimen/dimen3"
                android:background="@null"
                android:paddingTop="@dimen/dimen4"/>

            <ImageView
                android:id="@+id/iv_showPass"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:src="@drawable/visibility"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>








        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen12">



            <CheckBox
                android:id="@+id/cb_check1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_check_text1"
                android:layout_toRightOf="@+id/cb_check1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_marginLeft="@dimen/dimen12"
                android:textSize="@dimen/dimen6"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorBlack"
                tools:ignore="MissingConstraints" />


            <CheckBox
                android:id="@+id/cb_check2"
                android:layout_below="@+id/tv_check_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_toRightOf="@+id/cb_check2"
                android:layout_below="@+id/tv_check_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:layout_marginLeft="@dimen/dimen12"
                android:textSize="@dimen/dimen6"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="@dimen/dimen8"
                android:textColor="@color/colorBlack"
                tools:ignore="MissingConstraints "/>


        </RelativeLayout>
























    </LinearLayout>

    <Button
        android:id="@+id/btn_arrow_unselect"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/next_unselect"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen12"
        android:layout_marginRight="@dimen/dimen12"/>

    <Button
        android:id="@+id/btn_arrow_select"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:background="@drawable/next_select"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen12"
        android:layout_marginRight="@dimen/dimen12"/>



</RelativeLayout>
